Separated style into its own styles.css file

--- a/exercise1.html
+++ b/exercise1.html
@@ -1,42 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Restaurant Review</title>
-    <style>
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111111;
-}
-</style>
-  </head>
-
-
-
-
-
-
+<head>
+  <title>My Restaurant Review</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 
 <!-- heading -->
-  <div style="display:block">
+<div style="display:block">
   <div align="right">
     <ul>
       <li>
@@ -48,25 +18,25 @@ li a:hover {
       <li><a href="#option3">Option 3</a></li>
     </ul>
 
-    </div>
-    <div>
+  </div>
+  <div>
 
-    </div>
+  </div>
+</div>
+
+<body>
+  <div>
+    <p style="border: 15px solid black">Div 1</p>
+  </div>
+  <div>
+    <p style="border: 15px solid black">Div 2</p>
   </div>
 
-  <body>
-    <div>
-      <p style="border: 15px solid black">Div 1</p>
-    </div>
-    <div>
-      <p style="border: 15px solid black">Div 2</p>
-    </div>
+  <h1>This is a Heading</h1>
+  <p>This is a paragraph.</p>
+</body>
 
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
-  </body>
-
-  <footer>
-  </footer>
+<footer>
+</footer>
 
 </html>
