Changed the border style to be on the body boxes rather than around the paragraphs. Changed minor things.

--- a/exercise1.html
+++ b/exercise1.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <title>My Restaurant Review</title>
+  <!-- Reference to CSS stylesheet -->
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
-<!-- heading -->
+<!-- heading div -->
 <div style="display:block">
   <div align="right">
     <ul>
@@ -17,26 +18,26 @@
       <li><a href="#option2">Option 2</a></li>
       <li><a href="#option3">Option 3</a></li>
     </ul>
-
   </div>
+
   <div>
 
   </div>
 </div>
 
 <body>
-  <div>
-    <p style="border: 15px solid black">Div 1</p>
+  <div style="border: 15px solid black">
+    <p>Div 1</p>
+    <p>This is a paragraph.</p>
   </div>
-  <div>
-    <p style="border: 15px solid black">Div 2</p>
+  <div style="border: 15px solid black">
+    <p>Div 2</p>
+    <p>This is a paragraph.</p>
   </div>
-
-  <h1>This is a Heading</h1>
-  <p>This is a paragraph.</p>
 </body>
 
 <footer>
+  <p>This is the footer.</p>
 </footer>
 
 </html>
