Moved content into body tag, defined container class, deleted incorrent '</img>', commented sections, separated things into styles.css, minor changes

--- a/exercise1.html
+++ b/exercise1.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>My Restaurant Review</title>
-  <!-- Reference to CSS stylesheet -->
-  <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
+    <head>
+        <title>My Restaurant Review</title>
+        <!-- Reference to CSS stylesheet -->
+        <link rel="stylesheet" type="text/css" href="styles.css">
+    </head>
 
-<!-- heading div -->
-<div style="display:block">
-  <div align="right">
-    <ul>
-      <li>
-        <img src="messi.jpg" alt="logo" height="42" width="42"></img>
-        <h>My Page</h>
-      </li>
-      <li><a href="#option1">Option 1</a></li>
-      <li><a href="#option2">Option 2</a></li>
-      <li><a href="#option3">Option 3</a></li>
-    </ul>
-  </div>
+    <body>
 
-  <div>
+        <!-- HEADING DIV -->
+        <div style="display:block">
+            <div align="right">
+                <ul>
+                    <li>
+                        <img src="messi.jpg" alt="logo" height="42" width="42">
+                        <h1>My Restaurant Review</h1>
+                    </li>
+                    <li><a href="#option1">Option 1</a></li>
+                    <li><a href="#option2">Option 2</a></li>
+                    <li><a href="#option3">Option 3</a></li>
+                </ul>
+            </div>
 
-  </div>
-</div>
+            <div>
 
-<body>
-  <div style="border: 15px solid black">
-    <p>Div 1</p>
-    <p>This is a paragraph.</p>
-  </div>
-  <div style="border: 15px solid black">
-    <p>Div 2</p>
-    <p>This is a paragraph.</p>
-  </div>
-</body>
+            </div>
+        </div>
 
-<footer>
-  <p>This is the footer.</p>
-</footer>
+        <!-- BOX 1 DIV -->
+        <div class="container">
+            <h3>Div 1</h3>
+            <p>This is a paragraph.</p>
+        </div>
+
+        <!-- BOX 2 DIV -->
+        <div class="container">
+            <h3>Div 2</h3>
+            <p>This is a paragraph.</p>
+        </div>
+        
+        <div class="clearfix"></div>
+        
+        <!-- FOOTER -->
+        <footer>
+            <p>This is the footer.</p>
+        </footer>
+
+    </body>
 
 </html>
