created left- and right- container classes

--- a/exercise1.html
+++ b/exercise1.html
@@ -28,13 +28,13 @@
         </div>
 
         <!-- BOX 1 DIV -->
-        <div class="container">
+        <div class="left-container">
             <h3>Div 1</h3>
             <p>This is a paragraph.</p>
         </div>
 
         <!-- BOX 2 DIV -->
-        <div class="container">
+        <div class="right-container">
             <h3>Div 2</h3>
             <p>This is a paragraph.</p>
         </div>
