--- a/exercise1.html
+++ b/exercise1.html
@@ -13,7 +13,7 @@
             <div align="right">
                 <ul>
                     <li>
-                        <img src="messi.jpg" alt="logo" height="42" width="42">
+                        <img src="messi.jpg" alt="logo" height="42" width="42" float=left>
                         <h1>My Restaurant Review</h1>
                     </li>
                     <li><a href="#option1">Option 1</a></li>
