--- a/exercise1.html
+++ b/exercise1.html
@@ -13,7 +13,7 @@
     
                 <ul>
                     <li float="left">
-                        <img src="messi.jpg" alt="logo" height="42" width="42" float=left>
+                        <img src="burger_icon.png" alt="logo" height="75" width="75" float=left>
                         
                     </li>
                     <h1 style = "color: white; float: left">My Restaurant Review</h1>
