stylized left column

--- a/exercise1.html
+++ b/exercise1.html
@@ -13,7 +13,7 @@
     
                 <ul>
                     <li float="left">
-                        <img src="burger_icon.png" alt="logo" height="75" width="75" float=left>
+                        <img src="burger_icon.png" alt="logo">
                         
                     </li>
                     <h1 style = "color: white; float: left">My Restaurant Review</h1>
@@ -28,10 +28,11 @@
             <!-- BOX 1 DIV -->
             <div class="left-container">
                 <div>
-                    <img src= "lebron_profile_pic.png" alt="profile-pic" height="75" float=left>
-                    <p>@kingjames</p>
+                    <img src= "lebron_profile_pic.jpg" alt="profile-pic">
+                    <p id="username">@kingjames</p>
+                    <div class="clearfix"></div>
                     <h3>Personal Information</h3>
-                    <p>LeBron James <br> United States <br> Member since 2012</p>
+                    <p>LeBron James <br> United States <br> Member since 2003</p>
                     <h3>Last Opinions</h3>
                     <p class="restaurant">McDonald's, Madrid, Madrid ES</p>
                     <p class="comment">The McDonald's in Madrid are so fancy! It felt like I was in a high-quality, futuristic restaurant. The burgers are much more filling than their American counterparts, and the McBites are exquisite.</p>
@@ -41,7 +42,20 @@
                     <p class="comment">The amount of options is crazy. It's a fun place to just hang out with some friends. Just make sure to order multiple montaditos... they're pretty small.</p>
                 </div>
                 <div>
-                    <h3>My Preferences</h3>
+                    <h3 style="float:left">My Preferences</h3>
+                    <img src="plus.png" alt="plus-icon" style="height:30px;width:30px;float:right; margin:20px">
+                    <div class="preferences-section">
+                        <div class="preference">cheap
+                        <img src="x.png"></div>
+                        <div class="preference">family friendly
+                        <img src="x.png"></div>
+                        <div class="preference">good service
+                        <img src="x.png"></div>
+                        <div class="preference">big portions
+                        <img src="x.png"></div>
+                        <div class="preference">lit
+                        <img src="x.png"></div>
+                    </div>
                 </div>
             </div>
 
