--- a/exercise1.html
+++ b/exercise1.html
@@ -4,6 +4,7 @@
         <title>My Restaurant Review</title>
         <!-- Reference to CSS stylesheet -->
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -68,7 +69,12 @@
         
         <!-- FOOTER -->
         <footer>
-            <p>This is the footer.</p>
+            <div class="footer" style="text-align: center">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+            </div>
         </footer>
 
     </body>
