replaced pngs with fa icons, changed colors sd2342
:q
:x!

--- a/exercise1.html
+++ b/exercise1.html
@@ -44,18 +44,18 @@
                 </div>
                 <div>
                     <h3 style="float:left">My Preferences</h3>
-                    <img src="plus.png" alt="plus-icon" style="height:30px;width:30px;float:right; margin:20px">
+                    <a href="#" class="fa fa-plus"></a>
                     <div class="preferences-section">
                         <div class="preference">cheap
-                        <img src="x.png"></div>
+                        <a href="#" class="fa fa-close"></a></div>
                         <div class="preference">family friendly
-                        <img src="x.png"></div>
+                        <a href="#" class="fa fa-close"></a></div>
                         <div class="preference">good service
-                        <img src="x.png"></div>
+                        <a href="#" class="fa fa-close"></a></div>
                         <div class="preference">big portions
-                        <img src="x.png"></div>
+                        <a href="#" class="fa fa-close"></a></div>
                         <div class="preference">lit
-                        <img src="x.png"></div>
+                        <a href="#" class="fa fa-close"></a></div>
                     </div>
                 </div>
             </div>
