--- a/exercise1.html
+++ b/exercise1.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
     <head>
         <title>My Restaurant Review</title>
         <!-- Reference to CSS stylesheet -->
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta charset="utf-8"/>
     </head>
 
     <body>
@@ -13,11 +14,11 @@
         <div class="heading">
     
                 <ul>
-                    <li float="left">
+                    <li>
                         <img src="burger_icon.png" alt="logo">
                         
                     </li>
-                    <h1 style = "color: white; float: left">My Restaurant Review</h1>
+                    <li><h1 style = "color: white; float: left">My Restaurant Review</h1></li>
                     <li style="float: right"><a href="#option3">Contact Us</a></li>
                     <li style="float: right"><a href="#option2">About</a></li>
                     <li style="float: right"><a href="#option1">Donations</a></li>
