--- a/exercise2a.html
+++ b/exercise2a.html
@@ -63,6 +63,30 @@
 
             <!-- BOX 2 DIV -->
             <div class="right-container">
+                <h3>Personal Information</h3>
+                <form>
+                    <input type="text" name="firstname" placeholder="first name">
+                    <input type="text" name="lastname" placeholder="last name">
+                    <input type="text" name="email" placeholder="email">
+                    <input type="text" name="address" placeholder="address">
+                    <input type="text" name="phone" placeholder="phone">
+                    <input type="text" name="birthday" placeholder="birthday">
+                </form><br>
+                <h3>My App Activity</h3>
+                <div>
+                    <div class="activity-icon">
+                        <h3>2.700</h3> points
+                    </div>
+                    <div class="activity-icon">
+                        <h3>2</h3> level
+                    </div>
+                    <div class="activity-icon">
+                        <h3>3</h3> opinions
+                    </div>
+                    <div class="activity-icon">
+                        <h3>5</h3> photos
+                    </div>
+                </div>
             </div>
         </div>
         
