added links to Personal Info and Last Opinions, fixed padding on left container

--- a/exercise1.html
+++ b/exercise1.html
@@ -33,9 +33,9 @@
                     <img src= "lebron_profile_pic.jpg" alt="profile-pic">
                     <p id="username">@kingjames</p>
                     <div class="clearfix"></div>
-                    <h3>Personal Information</h3>
+                    <h3><a href="exercise2a.html">Personal Information</a></h3>
                     <p>LeBron James <br>Akron, Ohio, United States <br> Member since 2003</p>
-                    <h3>Last Opinions</h3>
+                    <h3><a href="exercise2b.html">Last Opinions</a></h3>
                     <p class="restaurant">McDonald's, Madrid, Madrid ES</p>
                     <p class="comment">The McDonald's in Madrid are so fancy! It felt like I was in a high-quality, futuristic restaurant. The burgers are much more filling than their American counterparts, and the McBites are exquisite.</p>
                     <p class="restaurant">El Novillo, Miami, FL US</p>
