did a ton of stuff

--- a/exercise2a.html
+++ b/exercise2a.html
@@ -3,7 +3,7 @@
     <head>
         <title>My Restaurant Review</title>
         <!-- Reference to CSS stylesheet -->
-        <link rel="stylesheet" type="text/css" href="main2a.css">
+        <link rel="stylesheet" type="text/css" href="main3.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="utf-8"/>
     </head>
@@ -71,7 +71,8 @@
                     <input type="text" name="address" placeholder="address">
                     <input type="text" name="phone" placeholder="phone">
                     <input type="text" name="birthday" placeholder="birthday">
-                </form><br>
+                </form>
+                <div class="clearfix"></div>
                 <h3>My App Activity</h3>
                 <div>
                     <div class="activity-icon">
