--- a/exercise3.html
+++ b/exercise3.html
@@ -73,7 +73,7 @@
             <!-- BOX 2 DIV -->
             <div class="col-7">
                 <div class="right-container">
-                    <h3>Personal Information</h3>
+                    <h3 id="personal-information-title">Personal Information</h3>
                     <form>
                         <input type="text" name="firstname" placeholder="first name">
                         <input type="text" name="lastname" placeholder="last name">
@@ -83,7 +83,7 @@
                         <input type="text" name="birthday" placeholder="birthday">
                     </form>
                     <div class="clearfix"></div>
-                    <h3>My App Activity</h3>
+                    <h3 id="app-activity-title">My App Activity</h3>
                     <div class="app-activity">
                         <div class="activity-icon">
                             <h3>2.700</h3> points
@@ -119,8 +119,6 @@
 
         <div class="mobile-tabs-section">
                         <ul>
-                <li>
-                </li>
                 <li><a href="#"><b>personal</b></a></li>
                 <li><a href="#">opinions</a></li>
                 <li><a href="#">preferences</a></li>
