error checked everything

--- a/exercise2b.html
+++ b/exercise2b.html
@@ -61,11 +61,11 @@
            
             <!-- BOX 2 DIV -->
             <div class="right-container">
-                <p id="username">Last Opinions</p>
+                <h2>Last Opinions</h2>
                 <div>
                     <div class="opinion">
                         <img src="McDonalds.jpg" alt="McDonalds">
-                        <p id = "restaurant_info">
+                        <p class="restaurant-info">
                             McDonald's <br> Madrid, ES <br> 20, September, 2019
                         </p>
                         <div class="clearfix"></div>
@@ -73,8 +73,8 @@
                     </div>
              
                     <div class="opinion">
-                        <img src="El Novillo.jpeg" alt="El Novillo">
-                        <p id = "restaurant_info">
+                        <img src="El Novillo.jpeg" alt="El-Novillo">
+                        <p class="restaurant-info">
                             El Novillo <br> Miami, Florida US <br> 15, January, 2004
                         </p>
                         <div class="clearfix"></div>
@@ -83,7 +83,7 @@
 
                     <div class="opinion">
                             <img src="100Montaditos.jpg" alt="100 Montaditos">
-                            <p id = "restaurant_info">
+                            <p class="restaurant-info">
                                 100 Montaditos <br> Madrid, ES <br> 07, March, 2010
                             </p>
                             <div class="clearfix"></div>
