--- a/exercise3.html
+++ b/exercise3.html
@@ -5,7 +5,8 @@
         <!-- Reference to CSS stylesheet -->
         <link rel="stylesheet" type="text/css" href="main3.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
     </head>
 
     <body>
@@ -18,9 +19,9 @@
 
                 </li>
                 <li><h1 id="title">My Restaurant Review</h1></li>
-                <li id="menu" style="float: right"><a href="#option3">Contact Us</a></li>
-                <li id="menu" style="float: right"><a href="#option2">About</a></li>
-                <li id="menu" style="float: right"><a href="#option1">Donations</a></li>
+                <li class="menu" style="float: right"><a href="#option3">Contact Us</a></li>
+                <li class="menu" style="float: right"><a href="#option2">About</a></li>
+                <li class="menu" style="float: right"><a href="#option1">Donations</a></li>
             </ul>
 
         </div>
@@ -108,7 +109,7 @@
         <!-- FOOTER -->
         <footer>
             <div class="footer" style="text-align: center">
-                <a href="#">Copyright &#169</a> 
+                <a href="#">Copyright &#169;</a> 
                 <div class=vertical-line></div>
                 <a href="#" class="fa fa-facebook"></a>
                 <a href="#" class="fa fa-twitter"></a>
