moved files into style and images folders

--- a/exercise2b.html
+++ b/exercise2b.html
@@ -3,7 +3,7 @@
     <head>
         <title>My Restaurant Review</title>
         <!-- Reference to CSS stylesheet -->
-        <link rel="stylesheet" type="text/css" href="main2b.css">
+        <link rel="stylesheet" type="text/css" href="style/main2b.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="utf-8"/>
     </head>
@@ -14,7 +14,7 @@
         <div class="heading">
     
                 <ul>
-                    <li> <img src="burger_icon.png" alt="logo"></li>
+                    <li> <img src="images/burger_icon.png" alt="logo"></li>
                     <li><h1 style = "color: white; float: left">My Restaurant Review</h1></li>
                     <li style="float: right"><a href="#option3">Contact Us</a></li>
                     <li style="float: right"><a href="#option2">About</a></li>
@@ -27,7 +27,7 @@
             <!-- BOX 1 DIV -->
             <div class="left-container">
                 <div>
-                    <img src= "lebron_profile_pic.jpg" alt="profile-pic">
+                    <img src= "images/lebron_profile_pic.jpg" alt="profile-pic">
                     <p id="username">@kingjames</p>
                     <div class="clearfix"></div>
                     <h3><a href="exercise2a.html">Personal Information</a></h3>
@@ -64,7 +64,7 @@
                 <h2>Last Opinions</h2>
                 <div>
                     <div class="opinion">
-                        <img src="McDonalds.jpg" alt="McDonalds">
+                        <img src="images/McDonalds.jpg" alt="McDonalds">
                         <p class="restaurant-info">
                             McDonald's <br> Madrid, ES <br> 20, September, 2019
                         </p>
@@ -73,7 +73,7 @@
                     </div>
              
                     <div class="opinion">
-                        <img src="El Novillo.jpeg" alt="El-Novillo">
+                        <img src="images/El Novillo.jpeg" alt="El-Novillo">
                         <p class="restaurant-info">
                             El Novillo <br> Miami, Florida US <br> 15, January, 2004
                         </p>
@@ -82,7 +82,7 @@
                     </div>
 
                     <div class="opinion">
-                            <img src="100Montaditos.jpg" alt="100 Montaditos">
+                            <img src="images/100Montaditos.jpg" alt="100 Montaditos">
                             <p class="restaurant-info">
                                 100 Montaditos <br> Madrid, ES <br> 07, March, 2010
                             </p>
