--- a/exercise3.html
+++ b/exercise3.html
@@ -3,7 +3,7 @@
     <head>
         <title>My Restaurant Review</title>
         <!-- Reference to CSS stylesheet -->
-        <link rel="stylesheet" type="text/css" href="main3.css">
+        <link rel="stylesheet" type="text/css" href="style/main3.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
@@ -15,7 +15,7 @@
         <div class="heading">
             <ul>
                 <li>
-                    <img src="burger_icon.png" alt="logo">
+                    <img src="images/burger_icon.png" alt="logo">
 
                 </li>
                 <li><h1 id="title">My Restaurant Review</h1></li>
@@ -39,7 +39,7 @@
             <div class="col-4">
                 <div class="left-container">
                     <div>
-                        <img src= "lebron_profile_pic.jpg" alt="profile-pic">
+                        <img src= "images/lebron_profile_pic.jpg" alt="profile-pic">
                         <p id="username">@kingjames</p>
                         <div class="clearfix"></div>
                         <h3><a href="exercise2a.html">Personal Information</a></h3>
