--- a/exercise1.html
+++ b/exercise1.html
@@ -3,7 +3,7 @@
     <head>
         <title>My Restaurant Review</title>
         <!-- Reference to CSS stylesheet -->
-        <link rel="stylesheet" type="text/css" href="main1.css">
+        <link rel="stylesheet" type="text/css" href="style/main1.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="utf-8"/>
     </head>
@@ -15,7 +15,7 @@
     
                 <ul>
                     <li>
-                        <img src="burger_icon.png" alt="logo">
+                        <img src="images/burger_icon.png" alt="logo">
                         
                     </li>
                     <li><h1 style = "color: white; float: left">My Restaurant Review</h1></li>
@@ -30,7 +30,7 @@
             <!-- BOX 1 DIV -->
             <div class="left-container">
                 <div>
-                    <img src= "lebron_profile_pic.jpg" alt="profile-pic">
+                    <img src= "images/lebron_profile_pic.jpg" alt="profile-pic">
                     <p id="username">@kingjames</p>
                     <div class="clearfix"></div>
                     <h3><a href="exercise2a.html">Personal Information</a></h3>
