--- a/exercise2a.html
+++ b/exercise2a.html
@@ -3,7 +3,7 @@
     <head>
         <title>My Restaurant Review</title>
         <!-- Reference to CSS stylesheet -->
-        <link rel="stylesheet" type="text/css" href="main3.css">
+        <link rel="stylesheet" type="text/css" href="style/main3.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="utf-8"/>
     </head>
