fixed username on mobile and tablet

--- a/exercise3.html
+++ b/exercise3.html
@@ -29,12 +29,18 @@
         <div class="tablet-tabs-section">
             <p>
                 <a href="#"><b>Personal Information</b></a> | 
-                <a href="#">Last Opinions</a> | 
+                <a href="exercise2b.html">Last Opinions</a> | 
                 <a href="#">My Preferences</a>
             </p>
         </div>
 
         <div class="body-container">
+            
+            <div class="username-line">
+                <img src= "images/lebron_profile_pic.jpg" alt="profile-pic">
+                <p id="username">@kingjames</p>
+            </div>
+            
             <!-- BOX 1 DIV -->
             <div class="col-4">
                 <div class="left-container">
